# cairos

./: .gitignore  AI_SETUP.md  CHANGELOG.md  CONFIGURATION.md  DEPENDENCIES.md  DEVELOPER.md  DOCUMENTATION.md  INSTALL.md  MANIFEST.in  MILESTONES.md  Makefile  README.md  SAFETY.md  TEMPLATES.md  TROUBLESHOOTING.md  USAGE.md  install_dependencies.sh  install_dev_dependencies.sh  pyproject.toml
.cairos/: rules.json
.github/workflows/: ci.yml  publish.yml
cairos/: cli.py  config.py  context.py  executor.py  explain.py  formatter.py  history.py  keys.py  models.py  planner.py  preview.py  provider_presets.py  pyproject.toml  router.py  router_dataset.py  rules.py  safety.py  shell_utils.py  templates.py  text.py
cairos/ai/: __init__.py  base.py
cairos/gui/: __init__.py  actions.py  app.py  schemas.py  security.py  server.py  state.py
cairos/gui/static/: app.css
cairos/gui/templates/: base.html  index.html
cairos/gui/templates/partials/: alerts.html  doctor.html  fallback.html  key_reveal.html  overview.html  profiles.html  provider_setup.html  update.html
data/: router_model.joblib  router_training.jsonl
docs/: AI_PROVIDERS.md  AI_SETUP.md  DEVELOPER.md  GUI.md  QUICKSTART.md  RELEASE.md  ROUTER.md  SAFETY.md  SHELL_NAVIGATION.md  TROUBLESHOOTING.md  TROUBLESHOOTING_AI.md  UPDATING.md  USER_GUIDE.md  WINDOWS.md
examples/: demo.md
integrations/: cairos.bash  cairos.fish  cairos.zsh
scripts/: docs_check.py  eval_router.py  run_tests.py  train_router.py
tests/: test_ai_fallback.py  test_ai_key_setup.py  test_cli_release.py  test_context.py  test_env_hints.py  test_gui.py  test_paths.py  test_planner.py  test_release_polish.py  test_router.py  test_router_dataset.py  test_templates.py
tests/cases/: testcases.json
