[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairos-shell"
version = "0.3.0"
description = "Context-aware AI-assisted shell command planner and safety layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CAIROS Developer" }]
license = { text = "MIT" }
keywords = ["cli", "shell", "terminal", "assistant", "ai", "developer-tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: System :: Shells",
]

[project.optional-dependencies]
dev = []

[project.scripts]
cairos = "cairos.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cairos*"]
