[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairos-shell"
version = "0.5.0a3"
description = "Context-aware AI-assisted shell command planner and safety layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CAIROS Developer" }]
license = { text = "MIT" }
keywords = ["cli", "shell", "terminal", "assistant", "ai", "developer-tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: System :: Shells",
]

[project.optional-dependencies]
dev = []
ml-router = [
  "scikit-learn>=1.4",
  "joblib>=1.3",
]
gui = [
  "fastapi",
  "uvicorn",
  "jinja2",
  "python-multipart",
]

[project.scripts]
cairos = "cairos.cli:main"

[project.urls]
Homepage = "https://github.com/Saltybukket/cairos"
Documentation = "https://github.com/Saltybukket/cairos#readme"
Issues = "https://github.com/Saltybukket/cairos/issues"
Source = "https://github.com/Saltybukket/cairos"

[tool.setuptools.packages.find]
where = ["."]
include = ["cairos*"]

[tool.setuptools.package-data]
"cairos.gui" = ["templates/*.html", "templates/partials/*.html", "static/*"]
